--- a/web_back/user.html
+++ b/web_back/user.html
@@ -43,8 +43,9 @@
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">用户图标：</label>
                     <div class="col-sm-10">
-                        <img src="images/2.jpg" name="user_pic" alt="" class="user_pic user_pic	">
-                        <input type="file" id="exampleInputFile">
+                        <img src="images/2.jpg"  name="user_pic" alt="" class="user_pic user_pic	"><br>
+                        <label for="exampleInputFile"><img src="./images/uploadFileIcon.png" alt=""></label>
+                        <input type="file" id="exampleInputFile" style=" display: none" name="user_pic">
                     </div>
                 </div>
 
