--- a/web_back/login.html
+++ b/web_back/login.html
@@ -74,7 +74,7 @@
                 // 请求数据
                 $.ajax({
                     type: "post",
-                    url: "https://autumnfish.cn/big/admin/login",
+                    url: "http://localhost:8000/admin/login",
                     data: {
                         user_name: zhanghao,
                         password: mima
