--- a/web_back/user.html
+++ b/web_back/user.html
@@ -36,14 +36,15 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label ">邮箱：</label>
                     <div class="col-sm-4">
-                        <input type="text" name="email" class="form-control email" id="inputEmail3" value="lisisi@126.com">
+                        <input type="text" name="email" class="form-control email" id="inputEmail3"
+                            value="lisisi@126.com">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">用户图标：</label>
                     <div class="col-sm-10">
-                        <img src="images/2.jpg"  name="user_pic" alt="" class="user_pic user_pic	"><br>
+                        <img src="images/2.jpg" name="user_pic" alt="" class="user_pic user_pic	"><br>
                         <label for="exampleInputFile"><img src="./images/uploadFileIcon.png" alt=""></label>
                         <input type="file" id="exampleInputFile" style=" display: none" name="user_pic">
                     </div>
@@ -52,7 +53,8 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label ">密码：</label>
                     <div class="col-sm-4">
-                        <input type="password" name="password" class="form-control password" id="inputEmail3" value="12345678">
+                        <input type="password" name="password" class="form-control password" id="inputEmail3"
+                            value="12345678">
                     </div>
                 </div>
 
@@ -95,7 +97,7 @@
             e.preventDefault();
             var formdata = new FormData($('form')[0]);
             console.log(formdata);
-            
+
             $.ajax({
                 type: 'post',
                 url: "http://localhost:8000/admin/userinfo_edit",
@@ -106,11 +108,22 @@
                 processData: false,
                 success: function (backData) {
                     console.log(backData);
-                        if(backData.code == 200){
-                           console.log('修改成功!');
-                        }
-                }
+                    if (backData.code == 200) {
+                        console.log('修改成功!');
+                        $.ajax({
+                            type: 'get',
+                            url: 'http://localhost:8000/admin/getuser',
+                            success: function (backData) {
+                                console.log(backData);
 
+                                // parent.$('.user_info > span').html('欢迎&nbsp;&nbsp;' +backData.data.nickname);
+                                // parent.$('.user_info>img').attr('src', backData.data.user_pic);
+                                // parent.$('.user_center_link>img').attr('src', backData.data.user_pic);
+
+                            }
+                        })
+                    }
+                }
             })
         })
     </script>
