--- a/web_back/user.html
+++ b/web_back/user.html
@@ -116,9 +116,9 @@
                             success: function (backData) {
                                 console.log(backData);
 
-                                // parent.$('.user_info > span').html('欢迎&nbsp;&nbsp;' +backData.data.nickname);
-                                // parent.$('.user_info>img').attr('src', backData.data.user_pic);
-                                // parent.$('.user_center_link>img').attr('src', backData.data.user_pic);
+                                parent.$('.user_info > span').html('欢迎&nbsp;&nbsp;' +backData.data.nickname);
+                                parent.$('.user_info>img').attr('src', backData.data.user_pic);
+                                parent.$('.user_center_link>img').attr('src', backData.data.user_pic);
 
                             }
                         })
