--- a/web_front/index.html
+++ b/web_front/index.html
@@ -215,11 +215,54 @@
             <span>|</span>
             <a href="#">招聘人才</a>
             <span>|</span>
-            <a href="#">友情链接</a>		
+            <a href="#">友情链接</a>
         </div>
-        <p>CopyRight © 2019 深圳大事件信息技术股份有限公司   All Rights Reserved</p>
-        <p>电话：0755-****888    粤ICP备*******8号</p>
+        <p>CopyRight © 2019 深圳大事件信息技术股份有限公司 All Rights Reserved</p>
+        <p>电话：0755-****888 粤ICP备*******8号</p>
     </div>
+
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/template-web.js"></script>
+    <script id="tmp_article" type="text/html">
+        {{each data v}}
+        {{if $index == 0}}
+        <li class="first">
+        {{else}}
+        <li>
+        {{/if}}
+            <a href="./article.html?id={{v.id}}"><img src="{{v.cover}}" alt=""></a>
+            <p>{{v.title}}</p>
+        </li>
+
+        {{/each data v}}
+    </script>
+
+    <script>
+        $(function () {
+
+            $.ajax({
+                url: 'http://localhost:8000/admin/search',
+                data: {
+                    key: '',
+                    type: '',
+                    state: '',
+                    page: 1,
+                    perpage: 5
+                },
+                success: function (backData) {
+                    console.log(backData);
+                    var resHtml = template('tmp_article',backData)
+                    $('.focus_list').html(resHtml)
+                }
+
+
+            })
+
+
+
+
+        })
+    </script>
 
 </body>
 
